Fix sticky section header on Safari

--- a/src/components/sectionHeader/SectionHeader.less
+++ b/src/components/sectionHeader/SectionHeader.less
@@ -19,9 +19,9 @@
   &::before {
     content: '';
     position: absolute;
-    top: -10px;
+    top: -30px;
     left: 0;
-    height: ~'calc(100% + 57px)';
+    height: ~'calc(100% + 87px)';
     width: 100%;
     background-color: fade(@color-bg-app, 98%);
     box-shadow: 0 0 25px 25px fade(@color-bg-app, 98%);
